--- a/.github/workflows/first-flow.yml
+++ b/.github/workflows/first-flow.yml
@@ -1,12 +1,19 @@
 name: First flow
-on: workflow_dispatch
+on: push
 jobs: 
-  first-job:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: print greeting
-        run: echo "Hello World!"
-      - name: print name
-        run: echo "Hello there"
+      - name: checkout code
+        uses: actions/checkout@v3
+      - name: Install nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm ci
+      - name: run tests
+        run: npm test
+
         
   
